Fix-spacing

--- a/src/components/authForm/authForm.scss
+++ b/src/components/authForm/authForm.scss
@@ -33,7 +33,7 @@
             width: 25.5rem;
             height: 2rem;
 
-            border: 1px solid #3D3D3D;
+            border: 0.0625rem solid #3D3D3D;
             border-radius: 0.25rem;
 
             padding: 0.3rem 0 0.3rem 1.5rem;
@@ -48,7 +48,7 @@
 
     .auth-help{
         width: 27rem;
-        border-top: 1px solid #000000;
+        border-top: 0.0625rem solid #000000;
         display: flex;
         flex-direction: column;
         align-items: center;
