--- a/src/components/footer/footer.scss
+++ b/src/components/footer/footer.scss
@@ -8,7 +8,7 @@
     // background: #ccc;
 
     .padding {
-        height: 400px;
+        height: 25rem;
     }
 
     .outer-wrapper {
@@ -16,13 +16,13 @@
         bottom: 0;
         left: 0;
         right: 0;
-        height: 300px;
+        height: 19rem;
 
         .footer--top {
             background-color: #313131;
             display: flex;
-            height: 80%;
-            padding-top: 20px;
+            height: 80.263%;
+            padding-top: 1.25rem;
             padding: 0 $primary-padding;
 
             .footer--image {
@@ -33,7 +33,7 @@
             }
 
             .footer--content {
-                padding-top: 20px;
+                padding-top: 1.25rem;
                 flex-basis: 25%;
                 display: flex;
                 justify-content: center;
@@ -43,7 +43,8 @@
                 font-family: 'Montserrat';
                 font-weight: 700;
                 font-size: initial;
-                padding-top: 3px;
+                padding-top: 0.1875rem;
+                font-style: normal;
             }
 
             ul {
@@ -55,14 +56,15 @@
             li {
                 font-family: 'Montserrat';
                 font-weight: 300;
-                margin-bottom: 10px;
+                margin-bottom: 0.625rem;
+                font-style: normal;
                 font-size: initial;
             }
         }
 
         .footer--bottom {
             padding: 0 $primary-padding;
-            height: 20%;
+            height: 19.737%;
             background-color: #cd3c3f;
             color: white;
             position: relative;
@@ -77,14 +79,14 @@
 
             .social-links {
                 position: absolute;
-                height: 82px;
-                width: 428px;
+                height: 5.125rem;
+                width: 26.75rem;
                 background-color: $primary-blue;
                 right: 0;
                 bottom: 0;
 
                 .copyright {
-                    padding-left: 90px;
+                    padding-left: 5.625rem;
                 }
 
                 ul {
@@ -95,7 +97,7 @@
                     height: 100%;
                     justify-content: space-between;
                     align-items: center;
-                    margin-left: 55px;
+                    margin-left: 3.4375rem;
                     margin-top: 0;
                     margin-bottom: 0;
                 }
