--- a/src/components/navbar/navbar.scss
+++ b/src/components/navbar/navbar.scss
@@ -47,14 +47,15 @@
 
             .address{
                 font-family: 'Montserrat', sans-serif;
-                margin-top: 1px;
+                margin-top: 0.0625rem;
                 height: 94%;
                 line-height: 2.5rem;
-                font-size: 1rem;
-
+                font-size: 1.25rem;
+                color: #2E5288;
+                font-weight: 700;
                 margin-left: 0.5rem;
                 padding-left: 0.5rem;
-                border-left: 1px solid red;
+                border-left: 0.0625rem solid red;
             }
 
             &:hover{
