--- a/src/pages/home/home.scss
+++ b/src/pages/home/home.scss
@@ -19,7 +19,7 @@
 
 
         .header{
-            border-bottom: 1px solid rgba($color: #000000, $alpha: 0.2);
+            border-bottom: 0.0625rem solid rgba($color: #000000, $alpha: 0.2);
 
             width: 55%;
             
@@ -44,13 +44,13 @@
                 
                 .item-main{
                     font-family: 'Montserrat', sans-serif;
-                    font-weight: 300;
+                    font-weight: 400;
                     line-height: 1.25rem;
                     font-size: 1rem;
                     // font-weight: 300;
-                  
-                    // color: #3E3E3E;
-                    color: #000000;
+                    opacity: 0.9;
+                    color: #3E3E3E;
+                    // color: #000000;
 
                     padding-left: 0.5rem;
                 }
@@ -86,7 +86,7 @@
                 .submit-text{
                     font-family: 'montserrat', sans-serif;
                     position: absolute;
-                    opacity: 0.7;
+                    opacity: 0.9;
                     left: 30.56%;
                     font-size: 1rem;
                     display: flex;
@@ -121,9 +121,9 @@
                         margin-top: 1.25rem;
                         line-height: 1.8rem;
                         font-size: 1rem;
-                        // color: #3E3E3E;
-                        color: #000000;
-                        font-weight: 300;
+                        color: #3E3E3E;
+                        font-weight: 400;
+                        opacity: 0.9;
                         
                     }
 
@@ -137,7 +137,7 @@
                     display: flex;
                     justify-content: flex-end;
                     font-size: 0.8rem;
-                    line-height: 20px;
+                    line-height: 1.25rem;
                     color: #cd3c3f;
                     font-weight: 700;
                 }
@@ -153,7 +153,7 @@
             flex-grow: 1;
             padding-left: $primary-padding;
             // background-color: blue;
-            border-left: 2.5px solid $primary-red;
+            border-left: 0.15625rem solid $primary-red;
         }
     }
 }
